migrate toward the new PersistenceUnitTransactionType from JPA 3.2
clean up the test base classes etc.

Signed-off-by: Gavin King <gavin@hibernate.org>